--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -12,11 +12,31 @@
         a {
             text-decoration: none;
             .card {
-                border: 2px solid black;
+                border: 2px solid rgb(252, 73, 97);
+                border-radius: 5px;
                 padding: 0.5em;
                 color: black;
+                transform: scale(1);
+                transition: transform 300ms ease-in-out;
+                &:hover {
+                    transform: scale(1.05);
+                }
             }
         }
     }
-
+    p {
+        margin: 2em auto;
+    }
+    .nav-link {
+        border: 1px solid rgb(252, 73, 97);
+        border-radius: 5px;
+        padding: 0.5em;
+        text-decoration: none;
+        color: black;
+        font-weight: bold;
+        &:hover {
+            background-color: rgb(252, 73, 97);
+        }
+    }
+    
 }
